# comet

./: .env.example  .gitignore  .prompt.example.yml  .ruff.toml  CHANGELOG.md  Makefile  README-JP.md  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/: .gitmessage  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_request.yml  feature_request.yml
.github/workflows/: codeql.yml
docs/: CONTRIBUTING-JP.md  CONTRIBUTING.md  DEVELOPERS.md
src/comet/: __main__.py  _env.py  _yml.py  cli.py
src/comet/adapters/: chat.py  response.py
src/comet/client/: discord_client.py
src/comet/commands/: __init__.py  access_command.py  chat_command.py  claude_command.py  gpt_command.py  on_message.py
src/comet/config/: anthropic_model.py  openai_model.py  timezone.py
src/comet/data/dto/: moderation_dto.py  user_dto.py
src/comet/data/sqlite/: access_control_dao.py  moderation_dao.py  sqlite_db_base.py
src/comet/db/: _base.py
src/comet/db/dao/: usage_limit_dao.py
src/comet/services/: anthropic.py  chat_manager.py  completion.py  moderation.py
src/comet/sqlite/: sqlite_db_base.py
src/comet/util/: setup_logger.py
src/comet/utils/: access_control.py  model_data_store.py  setup_logger.py
