[project]
name = "comet"
version = "0.1.0"
description = "AI-powered discord bot."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.49.0",
    "discord>=2.3.2",
    "openai>=1.74.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "types-pytz>=2025.2.0.20250326",
    "types-pyyaml>=6.0.12.20250402",
]
